openshift/overlays/production/route-patches.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-api
spec:
  host: redhat-api.aiben.io
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-dashboard
spec:
  host: redhat.aiben.io
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: adminer
spec:
  host: redhat-adminer.aiben.io
